--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -12,7 +12,19 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: "af-south-1"
+      AWS_REGION: "us-east-1"
+    
+    defaults:
+      - name: path_dir
+
+    runs:
+      - name: backend
+        description: "Terraform for App1"
+        working_dir: /environments/production/backend
+
+      - name: network
+        description: "Terraform for App2"
+        working_dir: /environments/production/network
 
     steps:
       - name: Checkout
